--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,22 @@
 {
   "crons": [
     {
+      "path": "/api/cron?job=health",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron?job=hourly",
+      "schedule": "0 * * * *"
+    },
+    {
+      "path": "/api/cron?job=daily",
+      "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/cron?job=weekly",
+      "schedule": "0 4 * * 1"
+    },
+    {
       "path": "/api/cron/content-generation",
       "schedule": "0 */6 * * *"
     },
