Update vercel.json with autonomous cron jobs

--- a/vercel.json
+++ b/vercel.json
@@ -23,20 +23,54 @@
     {
       "path": "/api/cron/massive-expansion",
       "schedule": "0 2 * * *"
+    },
+    {
+      "path": "/api/cron/autonomous?job=process_tasks",
+      "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/autonomous?job=scheduled_content",
+      "schedule": "*/30 * * * *"
     }
   ],
   "headers": [
     {
       "source": "/manifest.json",
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
       ]
     },
     {
       "source": "/sw.js",
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" },
-        { "key": "Service-Worker-Allowed", "value": "/" }
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
+    },
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PATCH, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
       ]
     }
   ]
