--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "openai": "^4.56.0",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "@types/leaflet": "^1.9.8"
+    "@types/leaflet": "^1.9.8",
+    "@zxing/library": "^0.21.0"
   },
   "devDependencies": {
     "typescript": "^5.5.0",
