--- a/package.json
+++ b/package.json
@@ -43,18 +43,22 @@
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.9",
     "@tanstack/react-table": "^8.11.6",
+    "@zxing/library": "^0.21.3",
+    "canvas-confetti": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
     "embla-carousel-react": "^8.0.0-rc21",
     "framer-motion": "^10.18.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.312.0",
     "next": "14.2.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.10.4",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
@@ -64,6 +68,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
