--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/process-images",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/sync-images",
+      "schedule": "0 * * * *"
     }
   ]
 }
