--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
     {
       "path": "/api/admin/populate-images",
       "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/cron/enrich-spirits",
+      "schedule": "0 4 * * *"
     }
   ]
 }
